2009-06-20  Torbjorn Granlund  <tege@gmplib.org>

	* mp-h.in (mp_bitcnt_t): Declare here too.

2009-06-19  Torbjorn Granlund  <tege@gmplib.org>

	* mpq/inits.c: New file.
	* mpf/inits.c: New file.
	* gmp-h.in (mpz_inits, mpq_inits, mpf_inits): Declare .

	* mpn/generic/remove.c: New file.
	* configure.in (gmp_mpn_functions): Add remove.
	* gmp-impl.h (mpn_remove): Declare.

	* gmp-h.in (mp_bitcnt_t): New basic type.
	* mpn/generic/perfpow.c (mp_bitcnt_t): Remove private definition.

	* mpn/generic/bdiv_qr.c: Make it actually work.

	* mpn/x86_64/core2/aorsmul_1.asm: Rewrite to use shorter pipeline and
	to need fewer registers.

2009-06-17  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/rsh1aors_n.asm: New file.
	* mpn/x86_64/rsh1add_n.asm: Remove.
	* mpn/x86_64/rsh1sub_n.asm: Remove.

	* mpz/inits.c: New file.

	* gen-trialdivtab.c: Wrap limb constants into CNST_LIMB.

	With Martin Boij:
	* mpn/generic/perfpow.c (binv_root, binv_sqroot): Change from being
	recursive to being iterative.
	(mpn_perfect_power_p): Reorganize temp memory usage to avoid a buffer
	overun.  Trim allocation of next and prev.  Never create oversize
	products in the multiplicity binary search.

	* mpn/generic/dc_div_q.c: Add missing TMP_FREE.

2009-06-16  Torbjorn Granlund  <tege@gmplib.org>

	Revert:
	* mpn/generic/perfpow.c (perfpow): Test exponents up to ub, inclusive.

2009-06-16  Martin Boij  <mboij@kth.se>

	* mpn/generic/perfpow.c (logs): Use more conservative table.

2009-06-15  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/pa64/aors_n.asm: New file.
	* mpn/pa64/add_n.asm: Remove.
	* mpn/pa64/sub_n.asm: Remove.

	* mpn/generic/perfpow.c (perfpow): Test exponents up to ub, inclusive.

2009-06-14  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/bdiv_q_1.asm: Optimize away a mov insn.
	* mpn/x86_64/dive_1.asm: Likewise.

	* mpn/generic/perfpow.c (binv_root): Use mpn_bdiv_q_1, not
	mpn_divexact_itch for 2-adic division.
	(all functions): Micro optimize.
