@@ -22,7 +22,7 @@ INCLUDES = -D__GMP_WITHIN_GMP -I$(top_srcdir)
 
 noinst_LTLIBRARIES = libmpq.la
 libmpq_la_SOURCES =							\
-  abs.c aors.c canonicalize.c clear.c					\
+  abs.c aors.c canonicalize.c clear.c clears.c				\
   cmp.c cmp_si.c cmp_ui.c div.c equal.c					\
   get_d.c get_den.c get_num.c get_str.c					\
   init.c inits.c inp_str.c inv.c md_2exp.c mul.c neg.c out_str.c	\
